[gd_scene load_steps=23 format=3 uid="uid://cepo7vkfckc16"]

[ext_resource type="PackedScene" uid="uid://dl7t8bg1gc3xw" path="res://enemy/enemy_base.tscn" id="1_rb5sg"]
[ext_resource type="Script" uid="uid://colgqlepaqxvy" path="res://enemy/blue_bird.gd" id="2_kanbn"]
[ext_resource type="Texture2D" uid="uid://b2mplua5sted6" path="res://Assets/Sprites/Enemies/BlueBird/Flying (32x32).png" id="3_oilqs"]
[ext_resource type="Texture2D" uid="uid://b4jml8ljm5lw8" path="res://Assets/Sprites/Enemies/BlueBird/Hit (32x32).png" id="4_3kb1d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qntbs"]
atlas = ExtResource("3_oilqs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsva7"]
atlas = ExtResource("3_oilqs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cipmt"]
atlas = ExtResource("3_oilqs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iguy2"]
atlas = ExtResource("3_oilqs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyfu6"]
atlas = ExtResource("3_oilqs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqcdq"]
atlas = ExtResource("3_oilqs")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g0mp"]
atlas = ExtResource("3_oilqs")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3yrj"]
atlas = ExtResource("3_oilqs")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bex6d"]
atlas = ExtResource("3_oilqs")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc0bd"]
atlas = ExtResource("4_3kb1d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihfdy"]
atlas = ExtResource("4_3kb1d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fdr2"]
atlas = ExtResource("4_3kb1d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta8un"]
atlas = ExtResource("4_3kb1d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j61rn"]
atlas = ExtResource("4_3kb1d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qdvoe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qntbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsva7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cipmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iguy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyfu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqcdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g0mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3yrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bex6d")
}],
"loop": true,
"name": &"fly",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc0bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihfdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fdr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta8un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j61rn")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oilqs"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oilqs"]
size = Vector2(15, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kb1d"]
size = Vector2(28, 7)

[node name="BlueBird" node_paths=PackedStringArray("anim_sprite") instance=ExtResource("1_rb5sg")]
script = ExtResource("2_kanbn")
anim_sprite = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_qdvoe")
animation = &"fly"
autoplay = "fly"

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_oilqs")

[node name="CollisionShape2D" parent="TopArea" index="0"]
position = Vector2(2.5, -7)
shape = SubResource("RectangleShape2D_oilqs")
debug_color = Color(0.665019, 0.31459, 1, 0.42)

[node name="CollisionShape2D" parent="BottomArea" index="0"]
position = Vector2(-1, 5.5)
shape = SubResource("RectangleShape2D_3kb1d")
debug_color = Color(1, 0.254638, 0.0416804, 0.42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="TopArea" to="." method="_on_top_area_body_entered"]
[connection signal="body_entered" from="BottomArea" to="." method="_on_bottom_area_body_entered"]
